# HyFed

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
examples/: client.py  compensator.py  run.sh  server.py
hyfed/: __init__.py  rand.py
test/: test_rand.py
