[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hyfed"
version = "0.3.0"

authors = [
    "Yueh-Hua Tu <yuehhua.tu@ailabs.tw>",
]

description = "A reimplementation of HyFed framework."
readme = "README.md"

classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = [
    {version = "~1", python = ">=3.8,<3.12"},
    {version = "^1.26", python = "^3.12"}
]
pydantic = "~2"
aiohttp = "~3"
fastapi = "^0.104.1"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pytest = "^7.4"

[tool.poetry.group.doc]

[tool.poetry.group.doc.dependencies]
sphinx = "^6.2"
myst-parser = "^2.0"

[tool.poetry.group.packaging]

[tool.poetry.group.packaging.dependencies]
build = "~1"

[tool.poetry.group.publishing]

[tool.poetry.group.publishing.dependencies]
twine = "~4"
